--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@
           <img src="./images/icon-email.svg" alt="Email icon" />
           <p class="footer__contact-info-email">example@fylo.com</p>
         </div>
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Ivan</a>.
+        </p>
       </div>
 
       <ul class="footer__first-links-wrapper">
@@ -201,12 +207,5 @@
         <i class="fa-brands fa-instagram"></i>
       </div>
     </footer>
-
-    <!-- <p class="attribution"> -->
-    <!-- Challenge by -->
-    <!-- <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" -->
-    <!-- >Frontend Mentor</a -->
-    <!-- >. Coded by <a href="#">Your Name Here</a>. -->
-    <!-- </p> -->
   </body>
 </html>
